typescript/checker/tests/conformance/expressions/binaryOperators/logicalOrOperator/logicalOrExpressionIsContextuallyTyped.ts.stderr
error: UnknownPropertyInObjectLiteralAssignment {
    span: Span {
        lo: BytePos(
            290,
        ),
        hi: BytePos(
            296,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/binaryOperators/logicalOrOperator/logicalOrExpressionIsContextuallyTyped.ts:6:33
  |
6 | var r: { a: string } = { a: '', b: 123 } || { a: '', b: true };
  |                                 ^^^^^^

